--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,17 +21,16 @@
 title: Spaced Out Thoughts Development Foundation
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  A small Ruby shop determined to make Soroban as easy to use as possible.
+  A small Ruby shop determined to make smart contracts as easy to use as possible.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
-github_username:  spaced-out-thoughts-dev-foundation
+github_username: spaced-out-thoughts-dev-foundation
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
-
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
